--- a/Proyecto_Bootstrap/css/catalogo.css
+++ b/Proyecto_Bootstrap/css/catalogo.css
@@ -1,63 +1,44 @@
 *{
     padding: 0;
-    margin: 0;    
+    margin: 0;
 }
 
 /*GRID*/
-#grid-container{          
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 120px auto 200px;    
-    grid-template-areas:  "header "
-                "catalogo "                
-                "footer";
-    background-color: rgb(180, 179, 179); 
+#grid-container{
+    background-color: rgb(34, 34, 34);
 }
+
 
 /*Header*/
-#main-header{
-    grid-area: header;       
+#main-header{       
     background-color: rgb(0, 0, 0); 
     position: sticky; /*Mantengo el Header visible al bajar*/
-    /*top:1px;   
-    z-index: auto; */     
-    padding: 5px;
-}
-
-.main-navbar{    
-    display: flex;   
-    justify-content: space-between; /*Espacio entre los contenderos de manera Horizontal*/  
-    align-items: flex-end; /*los items se colocan al final del contenedor*/ 
-    
-}
-
-.navlogo{     
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;           
-    margin: 1px;
-    padding: 5px;        
+/* top: 1px;   
+    z-index: 1;     
+    padding: 5px;*/
+    width: auto;
 }
 
 /*IMG -> En este caso es hijo de Div*/
 .logoempresa{     
     width: 240px;
-    height: 100px;    
+    height: 100px;       
 }
 
-.navslogan{    
+.navslogan{     
     font-style: italic;
     font-family: 'Times New Roman', Times, serif;
-    color: whitesmoke;
-    text-align: center; 
+    color: whitesmoke; 
+    padding-top: 25px;   
     padding-bottom: 25px;
-    width: 30%;   
+    width: auto;  
+    text-align: center; 
 }
 
 .navbarlist{       
     display: flex;
-    justify-content: space-around;     
-    width: 50%; 
+    justify-content: space-around;       
+    width: 90%; 
     list-style-type: none;       
 }
 
@@ -98,12 +79,6 @@
     
 }*/
 
-#main-catalogo{
-    grid-area: catalogo;
-    display: flex;
-    justify-content: space-between;
-    
-}
 
 .filtro{
     background: #e0e0e0; 
@@ -121,12 +96,10 @@
 
 .catalogo{        
     padding: 5px;   
-    display: grid;
-    grid-template-columns: repeat(4 , 295px);
-    grid-template-rows: repeat(3 , 1fr);    
-    justify-items: center; /*Eje Horizontal*/
-    align-items: center; /*Eje Vertical*/
     row-gap: 10px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
 }
 
 .catalogo > * {
@@ -134,7 +107,6 @@
 }
 
 #main-catalogo .banner{     
-    grid-column: 1 / span 4;
     width: 100%;
     height: 250px;
 }
@@ -145,32 +117,44 @@ height: 200px;
 }
 
 /*Footer*/
-#main-footer{    
-    grid-area: footer;       
-    background-color: rgb(24, 23, 23);
-    color: rgb(255, 255, 255);    
+#main-footer{
+    margin: 5px;   
+    padding: 5px;
+    width: auto;
+    height: auto;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255); 
+    /*border: 2px solid red;*/
+    display: flex;   
+    
 }
 
-.contenedor-footer{     
-    padding: 5px;    
-    display: grid;
-    grid-template-columns: repeat(3 , 1fr);
-    grid-template-rows: 160px 25px;
-    grid-template-areas: "contacto ubicacion redes"
-                        "autor autor autor";    
-    justify-items: center;     
+
+.row>.col, .row>[class^="col-"]{
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    background-color: rgba(167, 230, 255, 0.185);
+    border: 1px solid red;
 }
 
-.contenedor-footer h4{
+.contenedor-footer{      
+    padding: 5px;
+    width: 100%;
+    height: auto;    
+    display: flex;    
+    flex-flow: row wrap;  
+    justify-content: space-around; 
+    justify-items: center;
+}
+
+.contenedor-footer h4{    
     padding-bottom: 2px;
     border-bottom: 2px solid white; /*Subrayado*/
 }
 
-.contact-foo{     
-    grid-area: contacto;
-   /* grid-column: 1 / span 1; */     
+.contact-foo{    
     padding: 5px;
-    width: 250px;
+    width: 260px;
     height: 150px;
     display: flex;
     flex-direction: column;
@@ -179,16 +163,13 @@ height: 200px;
 }
 
 .map-foo{      
-    grid-area: ubicacion; 
-    /*grid-column: 2 / span 1; */     
     padding: 5px; 
     width: 250px;
     height: 150px;
-    text-align: center; 
+    text-align: center;
     display: flex;
     flex-direction: column; 
-    justify-content: space-around;   
-    text-align: center;  
+    justify-content: space-around;       
 }
 
 .map iframe{
@@ -197,201 +178,25 @@ height: 200px;
     width: 50mm;
 }
 
-.redes-foo{    
-    grid-area: redes;  
-    /*grid-column: 3 / span 1; */       
-    padding: 5px; 
+.redes-foo{ 
     width: 150px;
-    height: 150px;   
+    height: 150px;
+    text-align: center;    
     display: flex; 
-    flex-direction: column;    
-    text-align: center;                  
+    flex-flow: column nowrap; 
+    justify-content: space-around;   
 }
 
-.objects{    
-    height: 150px; 
+.objects{               
+    width: 100%;    
     display:flex;   
-    flex-direction: column;     
+    flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;   
 }
 
-.derechos-foo{   
-    grid-area: autor;      
-    padding: 2px;
-    width: 100%;
-    background-color: rgb(63, 63, 63);
-    text-align: right;
+.derechos-foo{     
+    padding: 2px;   
+    text-align: center;
+    margin-top: 20px;
 }
-
-/*Responsive*/
-@media screen and (min-width: 0px) and (max-width: 767px) {
-    #grid-container{
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: 120px auto auto;
-    }
-
-    .catalogo{
-    padding: 5px;   
-    display: grid;
-    grid-template-columns: repeat(2 , 1fr);
-    grid-template-rows: repeat(5 , 1fr);    
-    justify-items: center; /*Eje Horizontal*/
-    align-items: center; /*Eje Vertical*/
-    row-gap: 10px;
-    }
-
-    #main-catalogo .banner{     
-        grid-column: 1 / span 2;        
-    }
-
-    .navbarlist{       
-        position: fixed; 
-        width: 100%;
-        height: 100vh;
-        background: rgb(5, 5, 24);
-        top: 115px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;  
-    }
-
-    .navbarlist li{
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
-
-    .menubtn{            
-        display: block;/*Muestro el Menu Boton*/
-    }
-
-    
-    
-    .navbarlist li a:hover, a.active{
-        color: red;
-    }
-
-    #check:checked ~ .navbarlist{
-        left: 0%;
-    }
-    
-}
-
-@media screen and (max-width:428px) {
-    #grid-container{
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: auto;
-    }
-
-    .navlogo{
-        width: 350px;
-        justify-content: space-between;
-    }
-
-    .logoempresa{
-        width: 180px;
-        height: 100px; 
-    }
-    .navslogan{        
-        width: 150px;
-    }
-
-    .navbarlist{    
-        display: block;   
-        position: fixed;
-        flex-flow: column wrap;        
-        align-content: center;   
-        width: 50%;
-        height: 100vh;
-        background: rgb(5, 5, 24);
-        top: 115px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s; 
-    }
-    
-
-    .navbarlist li{
-        display: block;        
-        line-height: 30px;        
-    }
-
-    .menubtn{        
-        display: block;/*Muestro el Menu Boton*/
-    }
-
-    
-    
-    .navbarlist li a:hover, a.active{
-        color: red;
-    }
-
-    #check:checked ~ .navbarlist{
-        left: 0%;
-    }
-
-    .filtro{
-        display: none;
-    }
-
-    .catalogo{
-    padding: 5px;   
-    display: grid;
-    grid-template-columns: repeat(2 ,1fr);
-    grid-template-rows: auto;    
-    justify-items: center; /*Eje Horizontal*/
-    align-items: center; /*Eje Vertical*/
-    row-gap: 10px;
-    }
-
-    #main-catalogo .banner{     
-        grid-column: 1 / span 2; 
-        height: 180px;       
-    }
-
-    .contenedor-footer{     
-        padding: 5px;    
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: repeat(3 , 160px)  25px;
-        grid-template-areas: "contacto"
-                                "ubicacion"
-                                "redes"
-                                "autor";                            
-        justify-items: center;     
-    }
-
-    #main-catalogo .fotos-catalogo{ 
-        width: 150px;
-        height: 100px;
-        }
-
-    .contenedor-footer h4{
-        padding-bottom: 2px;
-        border-bottom: 2px solid white; /*Subrayado*/
-        margin-bottom: 10px;
-    }
-
-
-    .redes-foo{          
-        grid-area: redes;  
-        /*grid-column: 3 / span 1; */       
-        padding: 5px; 
-        width: 120px;           
-        display: flex; 
-        flex-flow: row wrap;    
-        justify-content: center;                               
-    }
-
-    .objects{          
-        width: 100px; 
-        display:flex;   
-        flex-flow: row wrap; 
-        justify-items: center; 
-        align-items: flex-start;
-    }
-}
-
